--- a/PAGES/02f_tuples/index.html
+++ b/PAGES/02f_tuples/index.html
@@ -2818,7 +2818,7 @@ color: white;
         <h2>Introduction</h2></p>
 <p>We continue our exploration of  <em>collections</em>, defined as objects storing multiple elements. Having previously focused on arrays, we&#39;ll now turn our attention to another form of collection known as  <em>tuples</em>. </p>
 <p>The defining characteristic of tuples is their fixed size and immutability. This implies that, once a tuple is created, its elements cannot be added, removed, or modified. While these restrictions might initially seem limiting, they also bring substantial performance gains when working with small collections. </p>
-<p>At this point, we&#39;ll only touch on the basics. A more in-depth exploration of tuples will follow in Part II, after we&#39;ve developed the necessary tools to understand the role of tuples for high performance.</p>
+<p>At this point, we&#39;ll only touch on the basics. A more in-depth exploration of tuples will follow in Part II, after we&#39;ve developed the necessary tools to understand the role of tuples in high-performance scenarios.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> </span>  </div>  <div class=content> <strong>Tuples should only be used when the collection comprises a small number of elements</strong>. Large tuples will result in slow computations at best, or directly trigger fatal errors. For large vectors, you should keep relying on vectors.  </div>  </div>
@@ -2831,8 +2831,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Definition of Tuples</h2></p>
-<p>The syntax for accessing the  <em>i</em>-th element of a tuple <code>x</code> is <code>x&#91;i&#93;</code>, similar to vectors. For its part, defining tuples requires enclosing their elements in parentheses <code>&#40;&#41;</code>, which contrasts with the square brackets <code>&#91;&#93;</code> used in vectors.</p>
-<p>When tuples comprise more than one element, the use of <code>&#40;&#41;</code> is optional and its omission is in fact a common practice. On the contrary, single-element tuples have stricter syntax rules: you must use parentheses <code>&#40;&#41;</code> and a trailing comma <code>,</code> after the element. For example, a tuple with the single element <code>10</code> is represented as <code>&#40;10,&#41;</code>. This notation distinguishes a tuple from the expression <code>&#40;10&#41;</code>, which would simply be interpreted as the number 10.</p>
+<p>The syntax for accessing the  <em>i</em>-th element of a tuple <code>x</code> is <code>x&#91;i&#93;</code>, similar to vectors. Likewise, defining tuples requires enclosing their elements in parentheses <code>&#40;&#41;</code>, which contrasts with the square brackets <code>&#91;&#93;</code> used in vectors.</p>
+<p>When tuples comprise more than one element, the use of <code>&#40;&#41;</code> is optional and its omission is in fact a common practice. On the contrary, single-element tuples have stricter syntax rules: you must use parentheses <code>&#40;&#41;</code> and a trailing comma <code>,</code> after the element. For example, a tuple with the single element <code>10</code> is represented as <code>&#40;10,&#41;</code>. This notation differentiates a tuple from the expression <code>&#40;10&#41;</code>, which would be interpreted simply as the number 10.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2907,7 +2907,7 @@ x &#61;  4,5,6           #alternative notation</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 18, 2025 
+          © Martin Alfaro <br>Last Modified March 20, 2025 
       </span> 
   </div> 
 </footer>
